[upgrade] implements XML:DB API 2.0.0
Signed-off-by: Patrick Reinhart <patrick@reini.net>